--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -645,7 +645,7 @@ groups:
 # The alert excludes nodes in maintenance or lame-duck.
   - alert: PusherFinderMtimeLowerBoundIsTooOld
     expr: |
-      (time() - pusher_finder_mtime_lower_bound) > (24 * 60 * 60)
+      (time() - pusher_finder_mtime_lower_bound) > (12 * 60 * 60)
         unless on(machine) gmx_machine_maintenance == 1
         unless on(machine) kube_node_spec_taint{cluster="platform-cluster", key="lame-duck"}
     for: 5m
@@ -654,8 +654,8 @@ groups:
       severity: ticket
     annotations:
       summary: Pusher max file mtime is too old.
-      description: Max file mtime is older than 24 hours. Uploads may be failing
-        and data could be lost if the node is rebooted before a successful upload.
+      description: Max file mtime is older than 24 hours. If uploads are failing
+        then data will be lost if the node reboots.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/WnaxPZJZz
 
 # Too many NDT S2C tests on a node are being impacted by switch discards.
