Add slo alert for daily gcs transfers to public archives

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -658,6 +658,28 @@ groups:
         then data will be lost if the node reboots.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/WnaxPZJZz
 
+# GCS Transfer SLO
+#
+# We run daily GCS transfers between project buckets and to the public archive.
+# See: https://github.com/m-lab/gcp-config/blob/master/daily-archive-transfers.yaml
+#
+# This alert enforces that daily transfers are working for all datatypes.
+  - alert: GCSTransfersArchiveFilesDoNotMatchOrMissing
+    expr: |
+      increase(gcs_archive_files_total{bucket="archive-mlab-oti"}[1d]) - ignoring(bucket)
+         increase(gcs_archive_files_total{bucket="archive-measurement-lab"}[1d]) != 0
+      OR
+      absent(gcs_archive_files_total)
+    for: 1d
+    labels:
+      repo: dev-tracker
+      severity: ticket
+    annotations:
+      summary: GCS Transfers may not include all files.
+      description: Daily transfers should include all archive files for each day.
+        This alert is firing becuase over the last two days, the archive file
+        counts did not match.
+
 # Too many NDT S2C tests on a node are being impacted by switch discards.
   - alert: DataQuality_TooManyNdtS2cTestsWithDiscards
     expr: (bq_ndt_s2c_with_discards / bq_ndt_s2c_total) > 0.05
