Improve summary message too

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -673,7 +673,7 @@ groups:
       repo: dev-tracker
       severity: ticket
     annotations:
-      summary: Pusher max file mtime is too old.
+      summary: Data on disk are too old and should have been uploaded already
       description: The min file mtime seen by pusher has been older than 16
         hours for at least 8 hours. If uploads are failing then data will be lost
         if the node reboots.
