Fix variable name.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -289,8 +289,8 @@ scrape_configs:
     metrics_path: '/federate'
     scheme: https
     basic_auth:
-      username: {{PLATFORM_PROMETHEUS_BASIC_AUTH_USER}}
-      password: {{PLATFORM_PROMETHEUS_BASIC_AUTH_PASS}}
+      username: {{PLATFORM_PROM_AUTH_USER}}
+      password: {{PLATFORM_PROM_AUTH_PASS}}
     params:
       # Scrape the status of all jobs. This should allow us determine
       # whether, for example, node_exporter is failing to be scraped
