Adds two new metrics to the platform-cluster federation scrape jobs for a new alert.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -315,6 +315,8 @@ scrape_configs:
         - 'node_memory_MemTotal_bytes'
         - 'node_edac_correctable_errors_total'
         - 'node_edac_uncorrectable_errors_total'
+        - 'kube_node_info'
+        - 'kube_node_labels'
         - 'kube_node_spec_taint{key="lame-duck"}'
         - 'kube_node_status_condition'
         - 'etcd_server_has_leader'
