Update reboot-api deployment to v0.4.0 and change scrape_interval.
The scrape_interval has been reset to default (1m). A scrape
interval higher than the global evaluation_interval isn't good.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -786,9 +786,8 @@ scrape_configs:
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
-  # Scrape BMC targets every 5m.
+  # Scrape BMC targets every minute.
   - job_name: 'bmc-targets'
-    scrape_interval: 5m
     scrape_timeout: 60s
     file_sd_configs:
       - files:
