--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -37,6 +37,7 @@ route:
     continue: true
     match:
       severity: page
+  - receiver: 'slack-alerts-ticket'
 
 # When two alerts are firing at the same time, we can "inhibit" one based on
 # the other. For example, a host is offline and a service on that host is not
