Prevents AM from sending staging alerts to PagerDuty by giving staging configs a 'match' selector for a non-existent label.

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -37,6 +37,7 @@ route:
     continue: true
     match:
       severity: page
+      {{FAKE_PROJECT_LABEL}}
   - receiver: 'slack-alerts-ticket'
 
 # When two alerts are firing at the same time, we can "inhibit" one based on
