Implements a better way of suppressing PagerDuty pages in mlab-staging.

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -37,7 +37,7 @@ route:
     continue: true
     match:
       severity: page
-      {{FAKE_PROJECT_LABEL}}
+      page-project: mlab-{{SHORT_PROJECT}}
   - receiver: 'slack-alerts-ticket'
 
 # When two alerts are firing at the same time, we can "inhibit" one based on
