Changes pageable alert labels to page_project instead of page-project, as hyphens are not valid for Prometheus labels.

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -37,7 +37,7 @@ route:
     continue: true
     match:
       severity: page
-      page-project: mlab-{{SHORT_PROJECT}}
+      page_project: mlab-{{SHORT_PROJECT}}
   - receiver: 'slack-alerts-ticket'
 
 # When two alerts are firing at the same time, we can "inhibit" one based on
