--- a/k8s/prometheus-federation/deployments/switch-monitoring.yml
+++ b/k8s/prometheus-federation/deployments/switch-monitoring.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: switch-monitoring
-        image: measurementlab/switch-monitoring:latest
+        image: measurementlab/switch-monitoring:v0.1.0
         args:
           - "-project={{GCLOUD_PROJECT}}"
           - "-ssh.username=switch-monitoring"
