Fix secret name

--- a/k8s/prometheus-federation/deployments/script-exporter.yml
+++ b/k8s/prometheus-federation/deployments/script-exporter.yml
@@ -62,4 +62,4 @@ spec:
           name: script-exporter-config
       - name: script-exporter-keys
         secret:
-          secretName: script-exporter-secrets
+          secretName: script-exporter-secret
