Add script-targets-federation directory

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -99,6 +99,9 @@ spec:
         - mountPath: /script-targets
           name: prometheus-storage
           subPath: script-targets
+        - mountPath: /script-targets-federation
+          name: prometheus-storage
+          subPath: script-targets-federation
         # /slow-targets should contain slow target config files.
         - mountPath: /slow-targets
           name: prometheus-storage
