--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -3,5 +3,5 @@ scripts:
     # NOTE: monitoring-token requires these variables in the environment.
     # MONITORING_SIGNER_KEY=<path to signing key>
     # LOCATE_URL=<locate service url>
-    script: monitoring-token -logx.debug=true -machine=${TARGET} -service=ndt/ndt5 -- ndt5-client -throttle=131072 -protocol=ndt5+wss
+    script: cache_exit_code.sh 600 monitoring-token -logx.debug=true -machine=${TARGET} -service=ndt/ndt5 -- ndt5-client -throttle=131072 -protocol=ndt5+wss
     timeout: 50
