--- a/k8s/prometheus-federation/deployments/script-exporter.yml
+++ b/k8s/prometheus-federation/deployments/script-exporter.yml
@@ -28,10 +28,12 @@ spec:
 
       containers:
       - name: script-exporter
-        image: soltesz/script-exporter-support:v0.0.2
+        image: soltesz/script-exporter-support:v0.0.3
         args:
         - -config.file=/etc/script_exporter/script_exporter.yml
         env:
+        - name: LOGX_DEBUG
+          value: 'true'
         - name: MONITORING_SIGNER_KEY
           value: /keys/monitoring-signer-key.json
         - name: LOCATE_URL
