Try adding tolerationSeconds to toleration config to allow pod update

--- a/k8s/prometheus-federation/deployments/script-exporter.yml
+++ b/k8s/prometheus-federation/deployments/script-exporter.yml
@@ -58,6 +58,7 @@ spec:
       - key: "outbound-ip"
         value: "static"
         effect: "NoSchedule"
+        tolerationSeconds: 60s
       volumes:
       - name: script-exporter-config
         configMap:
