--- a/k8s/prometheus-federation/deployments/script-exporter.yml
+++ b/k8s/prometheus-federation/deployments/script-exporter.yml
@@ -58,7 +58,7 @@ spec:
       - key: "outbound-ip"
         value: "static"
         effect: "NoSchedule"
-        tolerationSeconds: 60s
+        tolerationSeconds: 60
       volumes:
       - name: script-exporter-config
         configMap:
