NoExecute to allow toleration timeout

--- a/k8s/prometheus-federation/deployments/script-exporter.yml
+++ b/k8s/prometheus-federation/deployments/script-exporter.yml
@@ -57,7 +57,7 @@ spec:
       tolerations:
       - key: "outbound-ip"
         value: "static"
-        effect: "NoSchedule"
+        effect: "NoExecute"
         tolerationSeconds: 60
       volumes:
       - name: script-exporter-config
