Generate a different target file for switch-monitoring.
This is probably better than recycling snmp-targets.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -877,7 +877,7 @@ scrape_configs:
     scrape_timeout: 40s
     file_sd_configs:
       - files:
-          - /snmp-targets/*.json
+          - /switch-monitoring-targets/*.json
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
     scheme: http
