Fix dashboard link

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -196,7 +196,7 @@ groups:
 
         [1]: https://console.cloud.google.com/storage/browser/operator-mlab-oti/prometheus/script-targets
         [2]: https://prometheus.mlab-oti.measurementlab.net/targets
-      dashboard: https://grafana.mlab-oti.measurementlab.net/d/coR-U9gMk
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/coR-U9gMx
 
 # Prometheus is unable to get data from the blackbox_exporter service for IPv4
 # probes. The service is down, or the metric is missing.
