--- a/k8s/prometheus-federation/services/ingress-nginx-controller.yml
+++ b/k8s/prometheus-federation/services/ingress-nginx-controller.yml
@@ -39,6 +39,7 @@ metadata:
   namespace: ingress-nginx
 spec:
   type: LoadBalancer
+  loadBalancerIP: {{TLS_IP}}
   externalTrafficPolicy: Local
   ports:
     - name: http
