add new sql to deployment args

--- a/k8s/prometheus-federation/deployments/bigquery-exporter.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter.yml
@@ -21,6 +21,7 @@ spec:
                 "--type=gauge", "--query=/queries/bq_mlabns_ratelimit.sql",
                 "--type=gauge", "--query=/queries/bq_annotation.sql",
                 "--type=gauge", "--query=/queries/bq_gardener_parse_time.sql",
+                "--type=gauge", "--query=/queries/bq_gardener.sql",
                 "--type=gauge", "--query=/queries/bq_ndt_s2c.sql",
                 "--type=gauge", "--query=/queries/bq_billing_hourly.sql",
               ]
